SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/Product_Text_Data__c.object-meta.xml
<CustomObject>
    <description>Product and Product Category Texts Data in multiple languages</description>
    <label>Product Text Data</label>
    <nameField>
        <displayFormat>PTD-{00000000}</displayFormat>
        <label>Product Text Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Texts Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>