SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Product or Product Category Description</description>
    <inlineHelpText>Product or Product Category Description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>