SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/fields/Language_Key__c.field-meta.xml
<CustomField>
    <fullName>Language_Key__c</fullName>
    <description>Language Key</description>
    <inlineHelpText>Language Key (2 Character)</inlineHelpText>
    <label>Language Key</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>