SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Either enter Product or Product Category</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Texts Data</relationshipLabel>
    <relationshipName>ProductTextsData_del</relationshipName>
    <type>Lookup</type>
</CustomField>