SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/fields/Product_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Category ID</description>
    <inlineHelpText>Either enter Product or Product Category</inlineHelpText>
    <label>Product Category ID</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Product Texts Data</relationshipLabel>
    <relationshipName>Languages</relationshipName>
    <type>Lookup</type>
</CustomField>