SynProdGITV1/force-app/main/default/objects/Product_Text_Data__c/fields/Product_Text_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_Ext_ID__c</fullName>
    <description>Combination of Language Key and Product ID/Product Cat ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Language Key and Product ID/Product Cat ID</inlineHelpText>
    <label>Product Text Ext ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>